# nostrdice

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.build  GAME.md  LICENSE  README.md  docker-compose.yml  dprint.json  justfile  roller-config.json
.github/workflows/: docker.yml
.sqlx/: query-0be04778950f8e401de98cc06a4ad3870abebc1bc8c0d8a57dc4506760d23d04.json  query-2a9fbeb64d7f782e47f3ba79909fda8c639b57bf56939a32079863cdb6d856a6.json  query-2f46947a9b183521f7dc4033cb2dea8f2450af77ea516755c250faaff12c5ef2.json  query-3a223bd8460dfaefe8cea647283b5edd7d9479a844e02cacf2d1246a97d32992.json  query-588ba9fdf7171c890e55015085cbe793bfb340f50622aeafcc63123e47bec101.json  query-9724f5700673600d43eadf64dd4a0942957058b65ab15851b4e030481509b20f.json  query-a0a4bc59001a920a4cfb218f3c280ff0e0ca8543c1217f2b45e42b4c96be88c2.json  query-b61cbf74358561ef0928509dd283b62aca2ecb7cea8360598790b61bdf9a03bc.json  query-bd638d214e0137776e052c9b7698377727add6352d1eb27e9f64bc7f0d3c20df.json  query-c3fe35ee6f49cc94faa0f81cd1b265b230695521b265d4f85f340be8147a2a92.json  query-cb3c002e762a08dc7146066b519ab49961ad38ae1e8d583f3b36ee7e35186fa5.json
config/: admin.macaroon  alice-admin.macaroon  alice-tls.cert  bob-admin.macaroon  bob-tls.cert  cert.pem  key.pem  nginx.conf  nwc-lnd-keys.json
config/roller-lnurl-server-proxy/: nginx.conf
data/: main-keys.json  nonce-keys.json  social-keys.json
data-roller-lnurl-server/: keys.json
migrations/: 20240820070540_Initial.sql  20240827071039_Extra_zap_information.sql  20240827075209_Retry_zaps.sql
src/: config.rs  db.rs  dice.rs  logger.rs  main.rs  multiplier.rs  nonce.rs  payouts.rs  round.rs  routes.rs  social_updates.rs  subscriber.rs  utils.rs  zapper.rs
