[package]
name = "nostr-dice"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "nostr dice"

[[bin]]
name = "nostr-dice"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.6.20"
base64 = "=0.13.1"
bitcoin = { version = "0.30.2", features = ["serde"] }
clap = { version = "4.1.14", features = ["derive"] }
lightning-invoice = { version = "0.31.0", features = ["serde"] }
lnurl-rs = { version = "0.6.0", default-features = false }
nostr = { version = "0.29.0", default-features = false, features = ["nip57"] }
nostr-sdk = "0.29.0"
home = "0.5.4"
serde = "1.0"
serde_json = "1.0"
sled = "0.34.7"
time = { version = "0.3", features = ["serde", "parsing", "std", "formatting", "macros", "serde-well-known"] }
tokio = { version = "1.26.0", features = ["full"] }
tonic_openssl_lnd = "0.2.0"
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "time", "tracing-log", "json"] }
ureq = { version = "2.5.0", features = ["json"] }
hex = "0.4.3"
rand = "0.8.5"
sha2 = "0.10"
atty = "0.2.14"
strum = "0.26.3"
strum_macros = "0.26.4"
